<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submit" >

        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/category_subreddits"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/subreddits_category" />

            <LinearLayout
                android:id="@+id/subreddits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/category_subreddits"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp" >

                    <Button
                        android:id="@+id/front_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/reddit_front_page" />

                    <TextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/front_page"
                        android:layout_centerHorizontal="true"
                        android:text="@string/or"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Button
                        android:id="@+id/customize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/front_page"
                        android:layout_alignRight="@id/front_page"
                        android:layout_below="@id/or"
                        android:text="@string/pick_subreddits" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subreddits"
                android:orientation="vertical"
                android:visibility="gone" >

                <Button
                    android:id="@+id/add_another"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/add_more"
                    android:textColor="?android:attr/textColorSecondary"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/category_name"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_name" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/category_sort"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sort_category" />

                <Spinner
                    android:id="@+id/sort_picker"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_above="@+id/submit"
        android:background="?android:attr/dividerHorizontal" />

    <Button
        android:id="@id/submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="1dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/save" />

</RelativeLayout>